--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/icon.png" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
-  <meta property="og:image" content="%PUBLIC_URL%/share.png">
+  <link rel="icon" href="%PUBLIC_URL%/images/icon.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icon.png" />
+  <meta property="og:image" content="%PUBLIC_URL%/images/share.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div class="container" id="root"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
